@@ -25,8 +25,14 @@ Progression is gated by quests that must be completed by the player community to
 
 1. Get your modded launcher. I recommend [Prism Launcher](https://prismlauncher.org/).
 2. Point it at your Java 17 instance. If you've already installed Minecraft vanilla, it will have installed Java 17... somewhere. The standard launcher puts things in AppData or something. If you run vanilla, Task Manager will show the javaw.exe process for Minecraft, and you can use Open File Location to find it.
-3. Up the min and max ram. I put 8192 MB in both fields.
-4. Specify JVM arguments to reduce stutter from the garbage collector. This seems to work for me: `-XX:+UseG1GC -Dsun.rmi.dgc.server.gcInterval=600000 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:G1NewSizePercent=20 -XX:G1ReservePercent=20 -XX:MaxGCPauseMillis=50 -XX:G1HeapRegionSize=32`
+3. Go to Settings -> Java
+4. Increase both the min and max memory allocation. They should be the same. I put 8192 MB in both fields.
+4. Specify JVM arguments to reduce stutter from the garbage collector. Paste the entire thing below into box.
+
+Recommended JVM arguments:
+```
+-XX:+UnlockExperimentalVMOptions -XX:+UnlockDiagnosticVMOptions -XX:+AlwaysActAsServerClassMachine -XX:+AlwaysPreTouch -XX:+DisableExplicitGC -XX:+UseNUMA -XX:NmethodSweepActivity=1 -XX:ReservedCodeCacheSize=400M -XX:NonNMethodCodeHeapSize=12M -XX:ProfiledCodeHeapSize=194M -XX:NonProfiledCodeHeapSize=194M -XX:-DontCompileHugeMethods -XX:MaxNodeLimit=240000 -XX:NodeLimitFudgeFactor=8000 -XX:+UseVectorCmov -XX:+PerfDisableSharedMem -XX:+UseFastUnorderedTimeStamps -XX:+UseCriticalJavaThreadPriority -XX:ThreadPriorityPolicy=1 -XX:AllocatePrefetchStyle=3 -XX:+UseG1GC -XX:MaxGCPauseMillis=37 -XX:+PerfDisableSharedMem -XX:G1HeapRegionSize=16M -XX:G1NewSizePercent=23 -XX:G1ReservePercent=20 -XX:SurvivorRatio=32 -XX:G1MixedGCCountTarget=3 -XX:G1HeapWastePercent=20 -XX:InitiatingHeapOccupancyPercent=10 -XX:G1RSetUpdatingPauseTimePercent=0 -XX:MaxTenuringThreshold=1 -XX:G1SATBBufferEnqueueingThresholdPercent=30 -XX:G1ConcMarkStepDurationMillis=5.0 -XX:G1ConcRSHotCardLimit=16 -XX:G1ConcRefinementServiceIntervalMillis=150 -XX:GCTimeRatio=99
+```
 
 ### Set up instance
 
@@ -35,32 +41,51 @@ We are using a modpack file to automatically set up your modded Minecraft instan
 Each instance is treated as totally separate so things like graphics settings and controls aren't copied between, unfortunately.
 
 1. Click Add Instance
-2. TODO work out new workflow
+2. TODO Choose import from zip, and import the latest modpack file. Note that it defaults to filtering by .zip files, but our modpack is in .mrpack format.
+3. It should automatically download all the mods and set up the instance.
+4. Once it's ready, click Launch
 
 ## Updating
 
-TODO update instructions
+Updating is currently a little fiddly.
+
+1. In Prism Launcher, create a new instance, importing the new modpack file
+
+That's sorta it. You can just use that new instance. But if you want to keep your options:
+
+1. In your original instance, DELETE your `config`, `defaultconfigs`, `mods`, and `kubejs` folders
+2. Copy in those folders from the new instance
 
 # Server Setup
 
 ## Fresh Server
 
 1. Set up a Forge `43.2.0` server
-3. Copy the TODO WHICH FOLDERS folders to the server directory
+2. Copy the files from the client instance
+3. DELETE the following mods from the `mods` folder:
+    * `rubidium`
+    * `DistantHorizons`
 
-Adjust your java args. The "best" arguments are hotly discussed, but I'd recommend something like:
+Adjust your java args. The "best" arguments are hotly discussed, but I'd recommend as follows. These are DIFFERENT to the client args.
 
-`-server -Xms8G -Xmx8G -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -XX:+ZProactive -XX:ZCollectionInterval=600 -XX:+UseLargePages -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:+ParallelRefProcEnabled -XX:+PerfDisableSharedMem`
+```
+-server -Xmx8G -Xms8G -XX:+UnlockExperimentalVMOptions -XX:+UnlockDiagnosticVMOptions -XX:+AlwaysActAsServerClassMachine -XX:+AlwaysPreTouch -XX:+DisableExplicitGC -XX:+UseNUMA -XX:NmethodSweepActivity=1 -XX:ReservedCodeCacheSize=400M -XX:NonNMethodCodeHeapSize=12M -XX:ProfiledCodeHeapSize=194M -XX:NonProfiledCodeHeapSize=194M -XX:-DontCompileHugeMethods -XX:MaxNodeLimit=240000 -XX:NodeLimitFudgeFactor=8000 -XX:+UseVectorCmov -XX:+PerfDisableSharedMem -XX:+UseFastUnorderedTimeStamps -XX:+UseCriticalJavaThreadPriority -XX:ThreadPriorityPolicy=1 -XX:AllocatePrefetchStyle=3 -XX:+UseG1GC -XX:MaxGCPauseMillis=130 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1NewSizePercent=28 -XX:G1HeapRegionSize=16M -XX:G1ReservePercent=20 -XX:G1MixedGCCountTarget=3 -XX:InitiatingHeapOccupancyPercent=10 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=0 -XX:SurvivorRatio=32 -XX:MaxTenuringThreshold=1 -XX:G1SATBBufferEnqueueingThresholdPercent=30 -XX:G1ConcMarkStepDurationMillis=5 -XX:G1ConcRSHotCardLimit=16 -XX:G1ConcRefinementServiceIntervalMillis=150
+```
 
-TODO JVM args? This is quite different from the other ones I have.
 
-You can tweak the first couple of params for different RAM. Generally you want the Xms and Xmx (min and max) to be equal because of Java garbage collection things.
+You can tweak the first couple of params for different RAM. You want the Xms and Xmx (min and max) to be equal.
 
 Launch the server. It should "just work". If it doesn't, complain bitterly on WhatsApp.
 
 ## Updating
 
-You need to delete and re-add the following folders:
-* TODO which folders
+1. DELETE and re-add the following folders:
+    * `mods`
+    * `config`
+    * `defaultconfigs`
+    * `kubejs`
+2. DELETE the following mods from the `mods` folder:
+    * `rubidium`
+    * `DistantHorizons`
 
 If I've tested the update correctly, it should "just work". If it doesn't, complain bitterly on WhatsApp.
